// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RoadworkDetail > should render correctly (without create disruption button) when roadworks data is present for operator user 1`] = `
<DocumentFragment>
  <div
    className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
  >
    <p
      className="govuk-phase-banner__content"
    >
      <strong
        className="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        className="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and
         
        <a
          className="govuk-link"
          href="/feedback"
          id="feedback-link"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>,
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <h1
        class="govuk-heading-xl"
      >
        Roadworks in your area
      </h1>
      <h2
        class="govuk-heading-m"
      >
        KING STREET EAST - Utility repair and maintenance works
      </h2>
      <table
        class="govuk-table"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row"
          />
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Street name
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              King Street East
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Area name
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Milkstone
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Highway authority
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Rochdale Borough Council
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Work category
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Standard
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Activity type
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Utility repair and maintenance works
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Traffic management type
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Multi-way signals
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Start date
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              27/11/2023
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Start time
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              09:00
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Proposed end date
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              08/12/2023
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Proposed end time
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              00:00
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Permit reference number
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              JG222OC_CAP-1436121A-02
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Roadwork last updated
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              01/12/23 08:54
            </td>
          </tr>
        </tbody>
      </table>
      <a
        class="govuk-button mt-8 govuk-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/view-all-roadworks"
        id="return-roadworks-overview-button"
        role="button"
      >
        Return to roadworks
      </a>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`RoadworkDetail > should render correctly when roadwork data is present and a draft disruption exists for given roadwork for LTA user 1`] = `
<DocumentFragment>
  <div
    className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
  >
    <p
      className="govuk-phase-banner__content"
    >
      <strong
        className="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        className="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and
         
        <a
          className="govuk-link"
          href="/feedback"
          id="feedback-link"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>,
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <h1
        class="govuk-heading-xl"
      >
        Roadworks in your area
      </h1>
      <h2
        class="govuk-heading-m"
      >
        KING STREET EAST - Utility repair and maintenance works
      </h2>
      <table
        class="govuk-table"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row"
          />
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Street name
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              King Street East
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Area name
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Milkstone
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Highway authority
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Rochdale Borough Council
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Work category
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Standard
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Activity type
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Utility repair and maintenance works
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Traffic management type
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Multi-way signals
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Start date
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              27/11/2023
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Start time
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              09:00
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Proposed end date
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              08/12/2023
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Proposed end time
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              00:00
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Permit reference number
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              JG222OC_CAP-1436121A-02
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Roadwork last updated
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              01/12/23 08:54
            </td>
          </tr>
        </tbody>
      </table>
      <a
        class="govuk-button mt-8 mr-5"
        data-module="govuk-button"
        draggable="false"
        href="/review-disruption/d7991c1b-f332-4f6e-a150-faffebcd1ff6"
        id="view-draft-disruption-button"
        role="button"
      >
        View draft disruption
      </a>
      <a
        class="govuk-button mt-8 govuk-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/view-all-roadworks"
        id="return-roadworks-overview-button"
        role="button"
      >
        Return to roadworks
      </a>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`RoadworkDetail > should render correctly when roadwork data is present and a draft disruption exists for given roadwork for an operator user 1`] = `
<DocumentFragment>
  <div
    className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
  >
    <p
      className="govuk-phase-banner__content"
    >
      <strong
        className="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        className="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and
         
        <a
          className="govuk-link"
          href="/feedback"
          id="feedback-link"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>,
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <h1
        class="govuk-heading-xl"
      >
        Roadworks in your area
      </h1>
      <h2
        class="govuk-heading-m"
      >
        KING STREET EAST - Utility repair and maintenance works
      </h2>
      <table
        class="govuk-table"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row"
          />
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Street name
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              King Street East
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Area name
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Milkstone
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Highway authority
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Rochdale Borough Council
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Work category
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Standard
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Activity type
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Utility repair and maintenance works
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Traffic management type
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Multi-way signals
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Start date
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              27/11/2023
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Start time
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              09:00
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Proposed end date
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              08/12/2023
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Proposed end time
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              00:00
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Permit reference number
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              JG222OC_CAP-1436121A-02
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Roadwork last updated
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              01/12/23 08:54
            </td>
          </tr>
        </tbody>
      </table>
      <a
        class="govuk-button mt-8 govuk-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/view-all-roadworks"
        id="return-roadworks-overview-button"
        role="button"
      >
        Return to roadworks
      </a>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`RoadworkDetail > should render correctly when roadwork data is present and a published disruption exists for given roadwork for LTA user 1`] = `
<DocumentFragment>
  <div
    className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
  >
    <p
      className="govuk-phase-banner__content"
    >
      <strong
        className="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        className="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and
         
        <a
          className="govuk-link"
          href="/feedback"
          id="feedback-link"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>,
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <h1
        class="govuk-heading-xl"
      >
        Roadworks in your area
      </h1>
      <h2
        class="govuk-heading-m"
      >
        KING STREET EAST - Utility repair and maintenance works
      </h2>
      <table
        class="govuk-table"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row"
          />
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Street name
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              King Street East
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Area name
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Milkstone
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Highway authority
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Rochdale Borough Council
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Work category
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Standard
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Activity type
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Utility repair and maintenance works
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Traffic management type
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Multi-way signals
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Start date
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              27/11/2023
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Start time
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              09:00
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Proposed end date
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              08/12/2023
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Proposed end time
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              00:00
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Permit reference number
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              JG222OC_CAP-1436121A-02
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Roadwork last updated
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              01/12/23 08:54
            </td>
          </tr>
        </tbody>
      </table>
      <a
        class="govuk-button mt-8 mr-5"
        data-module="govuk-button"
        draggable="false"
        href="/disruption-detail/d7991c1b-f332-4f6e-a150-faffebcd1ff6"
        id="view-disruption-button"
        role="button"
      >
        View disruption
      </a>
      <a
        class="govuk-button mt-8 govuk-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/view-all-roadworks"
        id="return-roadworks-overview-button"
        role="button"
      >
        Return to roadworks
      </a>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`RoadworkDetail > should render correctly when roadwork data is present and a published disruption exists for given roadwork for operator user 1`] = `
<DocumentFragment>
  <div
    className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
  >
    <p
      className="govuk-phase-banner__content"
    >
      <strong
        className="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        className="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and
         
        <a
          className="govuk-link"
          href="/feedback"
          id="feedback-link"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>,
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <h1
        class="govuk-heading-xl"
      >
        Roadworks in your area
      </h1>
      <h2
        class="govuk-heading-m"
      >
        KING STREET EAST - Utility repair and maintenance works
      </h2>
      <table
        class="govuk-table"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row"
          />
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Street name
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              King Street East
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Area name
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Milkstone
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Highway authority
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Rochdale Borough Council
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Work category
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Standard
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Activity type
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Utility repair and maintenance works
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Traffic management type
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Multi-way signals
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Start date
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              27/11/2023
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Start time
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              09:00
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Proposed end date
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              08/12/2023
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Proposed end time
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              00:00
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Permit reference number
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              JG222OC_CAP-1436121A-02
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Roadwork last updated
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              01/12/23 08:54
            </td>
          </tr>
        </tbody>
      </table>
      <a
        class="govuk-button mt-8 mr-5"
        data-module="govuk-button"
        draggable="false"
        href="/disruption-detail/d7991c1b-f332-4f6e-a150-faffebcd1ff6"
        id="view-disruption-button"
        role="button"
      >
        View disruption
      </a>
      <a
        class="govuk-button mt-8 govuk-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/view-all-roadworks"
        id="return-roadworks-overview-button"
        role="button"
      >
        Return to roadworks
      </a>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`RoadworkDetail > should render correctly when roadworks data is present for LTA user 1`] = `
<DocumentFragment>
  <div
    className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
  >
    <p
      className="govuk-phase-banner__content"
    >
      <strong
        className="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        className="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and
         
        <a
          className="govuk-link"
          href="/feedback"
          id="feedback-link"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>,
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <h1
        class="govuk-heading-xl"
      >
        Roadworks in your area
      </h1>
      <h2
        class="govuk-heading-m"
      >
        KING STREET EAST - Utility repair and maintenance works
      </h2>
      <table
        class="govuk-table"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row"
          />
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Street name
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              King Street East
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Area name
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Milkstone
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Highway authority
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Rochdale Borough Council
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Work category
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Standard
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Activity type
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Utility repair and maintenance works
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Traffic management type
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              Multi-way signals
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Start date
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              27/11/2023
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Start time
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              09:00
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Proposed end date
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              08/12/2023
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Proposed end time
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              00:00
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Permit reference number
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              JG222OC_CAP-1436121A-02
            </td>
          </tr>
          <tr
            class="govuk-table__row"
          >
            <th
              class="govuk-table__header align-middle"
              scope="row"
            >
              Roadwork last updated
            </th>
            <td
              class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
            >
              01/12/23 08:54
            </td>
          </tr>
        </tbody>
      </table>
      <a
        class="govuk-button mt-8 mr-5"
        data-module="govuk-button"
        draggable="false"
        href="/create-disruption/d7991c1b-f332-4f6e-a150-faffebcd1ff6?permitReferenceNumber=JG222OC_CAP-1436121A-02&roadworkStartDateTime=2023-11-27T09%3A00%3A00.000Z&roadworkEndDateTime=2023-12-08T00%3A00%3A00.000Z&roadworkSummary=King%20Street%20East%20-%20Utility%20repair%20and%20maintenance%20works"
        id="create-new-button"
        role="button"
      >
        Create disruption
      </a>
      <a
        class="govuk-button mt-8 govuk-button--secondary"
        data-module="govuk-button"
        draggable="false"
        href="/view-all-roadworks"
        id="return-roadworks-overview-button"
        role="button"
      >
        Return to roadworks
      </a>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
